--- a/pages/faq.html
+++ b/pages/faq.html
@@ -45,7 +45,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
+        class="hidden container pl-28 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
@@ -219,5 +219,69 @@
       </div>
     </footer>
   </body>
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Is there a deadline to apply?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We do not have a specific deadline to apply, and we accept applications throughout the year. This means that you can apply at any time that is convenient for you."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What are the eligibility criteria for applying?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "To apply, one must be a college student and have a startup idea. This is the fundamental criterion by which we evaluate applications. However, it's worth noting that the idea does not need to be fully formed, it can be in the ideation stage as well."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What's the selection ratio for the application?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Our selection ratio is quite high, meaning that if we see that all the ideas have potential, we are ready to fund all of them. We believe in the power of good ideas, and we want to support as many of them as possible."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "I am in the ideation stage with no product. Can I still apply?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Yes, you can still apply even if you are in the ideation stage and don't have a product yet. We understand that not every idea is fully formed at the time of application and that's okay. We are here to support you and help you bring your idea to life."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How much equity do you take on as the connecting platform?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "As a platform, we take 1 percent equity on getting you connected with an investor and helping you getting the funding secured. This is our way of making sure that we have a vested interest in the success of your startup."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "What is the cohort program run by Seedsnitch, and do you take any cohort fees?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "The cohort program is offered 2-3 times per year and is completely free to participants. All the selected applications are part of the cohort. We believe that providing free resources and support is the best way to help founders succeed."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "I have no background in running a business. Will that affect my application for shortlisting?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "No, having no background in running a business will not affect your application for shortlisting. We believe that the passion and drive to start a business are more important than any degree or business background. Every application is treated equally, and we take all factors into consideration when evaluating them."
+          }
+        }
+      ]
+    }
+  </script>
   <script src="../js/scripts.js"></script>
 </html>
