--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
+        class="hidden container pl-28 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./pages/about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
@@ -200,7 +200,7 @@
     </section>
     <section>
       <div
-        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-16 bg-[#f8f8f8] pt-4"
+        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-16 pt-4"
       >
         <div class="index-row flex flex-col md:flex-row container">
           <div class="course-col">
