--- a/pages/about.html
+++ b/pages/about.html
@@ -45,7 +45,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
+        class="hidden container pl-28 flex-row items-center justify-center space-x-10 md:flex md:max-w-1/3"
       >
         <a href="#" class="font-bold border-b-[2px] border-[#01c0c4]">About</a>
         <a href="#" class="link">Community</a>
@@ -118,39 +118,6 @@
         </div>
       </div>
     </section>
-    <!-- <section
-      class="w-full mx-auto flex flex-col items-center mt-16 yellow gap-6 py-10 md:gap-16 md:pt-8 md:w-full"
-    >
-      <div
-        class="flex flex-col items-center justify-between mt-4 space-y-4 md:space-x-4 md:flex-row md:px-6"
-      >
-        <div class="w-full px-4 md:w-1/2 md:flex justify-center">
-          <img
-            src="../img/about.jpg"
-            class="object-contain max-w-[600px] w-full"
-            alt="we are seedsnitch"
-          />
-        </div>
-        <div
-          class="container w-full flex flex-row items-center md:w-1/2 px-4 md:pr-28"
-        >
-          <p
-            class="text-[1em] md:text-[24px] font-[400] text-center md:pl-14 max-w-lg md:max-w-full leading-relaxed"
-          >
-            Seedsnitch is a platform dedicated to helping college students
-            transform their ideas into successful ventures. Being aware of the
-            unique challenges that a student might come across while starting
-            up, we are here to bridge the gap through guidance and Communitys
-            essential to overcome them. We are a Community with a stern belief
-            that when entrepreneurs come together sharing their share of
-            experiences and support, great things happen.
-          </p>
-        </div>
-      </div>
-    </section>
-    <div class="w-full mx-auto flex flex-col items-center justify-center">
-      <hr class="h-px w-2/3 mt-10 bg-[#242424] border-0" />
-    </div> -->
 
     <section>
       <div
