--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -45,7 +45,7 @@
         </a>
       </div>
       <div
-        class="hidden container ml-6 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
+        class="hidden container pl-28 flex-row items-center justify-center space-x-10 md:flex max-w-1/3"
       >
         <a href="./about.html" class="link">About</a>
         <a href="#" class="link">Community</a>
