--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
     <!-- Intro Section -->
     <section
       id="intro"
-      class="hidden h-auto w-screen overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
+      class="hidden h-auto w-full overflow-hidden md:flex justify-between flex-row mt-24 px-24 mb-6 text-left"
     >
       <div
         class="w-1/2 space-y-8 flex flex-col justify-center items-start pt-20 text-center pl-32"
