--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -214,7 +214,7 @@
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full px-3">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-name"
                 >
                   Name
@@ -232,7 +232,7 @@
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full px-3">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-email"
                 >
                   Email
@@ -250,7 +250,7 @@
             <div class="flex flex-wrap -mx-3 mb-6">
               <div class="w-full px-3">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-linkedin"
                 >
                   Linkedin profile
@@ -267,7 +267,7 @@
             <div class="flex flex-wrap -mx-3 mb-2 mt-8">
               <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-plan"
                 >
                   How do you plan to network with startup founders or those in
@@ -286,7 +286,7 @@
             <div class="flex flex-wrap -mx-3 mb-2 mt-8">
               <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-prob"
                 >
                   Do you know people who are working on a startup idea, and you
@@ -306,7 +306,7 @@
             <div class="flex flex-wrap -mx-3 mb-2 mt-8">
               <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                 <label
-                  class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                  class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                   for="grid-desc"
                 >
                   Is there anything you want to tell us about yourself?
