--- a/pages/apply.html
+++ b/pages/apply.html
@@ -135,7 +135,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-name"
                   >
                     Name
@@ -153,7 +153,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-email"
                   >
                     Email
@@ -171,7 +171,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full md:w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-startname"
                   >
                     Startup name
@@ -189,7 +189,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-linkedin"
                   >
                     Linkedin profile
@@ -206,7 +206,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-college"
                   >
                     College
@@ -224,7 +224,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-number"
                   >
                     Contact Number
@@ -243,7 +243,7 @@
               <div class="flex flex-wrap -mx-3 mb-6 w-full">
                 <div class="w-full md:w-full px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-stage"
                   >
                     What is the current status of your startup (ideation,
@@ -267,7 +267,7 @@
               <div class="w-full flex flex-wrap -mx-3 mb-2">
                 <div class="w-full md:w-full mb-6 md:mb-0 px-3">
                   <label
-                    class="uppercase tracking-wide text-darkBlue text-xs font-bold mb-2 w-full"
+                    class="tracking-wide text-darkBlue text-xs font-bold mb-2 w-full"
                     for="grid-diff"
                   >
                     Describe your startup?
@@ -285,7 +285,7 @@
               <div class="w-full flex flex-wrap -mx-3 mb-2">
                 <div class="w-full mb-6 md:mb-0 px-3">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-prob"
                   >
                     What is the problem you are trying to solve with your
@@ -305,7 +305,7 @@
               <div class="w-full flex flex-wrap -mx-3">
                 <div class="w-full md:w-full px-3 mb-6 md:mb-0">
                   <label
-                    class="block uppercase tracking-wide text-darkBlue text-xs font-bold mb-2"
+                    class="block tracking-wide text-darkBlue text-xs font-bold mb-2"
                     for="grid-diff"
                   >
                     How does your startup differentiate itself from similar
