--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
     </section>
     <section>
       <div
-        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-16 pt-4"
+        class="w-full mx-auto h-auto flex flex-col items-center justify-center px-10 md:px-6 md:mb-0 md:pb-10 mb-6 mt-18 pt-4"
       >
         <div class="index-row flex flex-col md:flex-row container">
           <div class="course-col">
@@ -233,10 +233,27 @@
     <footer class="bg-[#0f6d6d] text-white py-2 static bottom-0 left-0 w-full">
       <div class="footer">
         <div class="row">
-          <a href="#" id="linkedin"><i class="fab fa-linkedin"></i></a>
-          <a href="#" id="instagram"><i class="fab fa-instagram"></i></a>
-          <a href="#" id="youtube"><i class="fab fa-youtube"></i></a>
-          <a href="#" id="twitter"><i class="fab fa-twitter"></i></a>
+          <a
+            target="_blank"
+            href="https://instagram.com/seedsnitch?igshid=ZDdkNTZiNTM="
+            id="instagram"
+            ><i class="fab fa-instagram"></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=connect@seedsnitch.in"
+            id="gmail"
+            ><i class="fas fa-envelope"></i
+          ></a>
+          <a
+            target="_blank"
+            href="https://www.linkedin.com/company/seedsnitch/"
+            id="linkedin"
+            ><i class="fab fa-linkedin"></i
+          ></a>
+          <a target="_blank" href="https://twitter.com/seedsnitch" id="twitter"
+            ><i class="fab fa-twitter"></i
+          ></a>
         </div>
 
         <div class="row">
