--- a/pages/contact.html
+++ b/pages/contact.html
@@ -283,10 +283,10 @@
               <div>
                 <div>
                   <p class="font-medium text-center">
-                    Phone:&nbsp;+91 8144200700&nbsp;
+                    Phone:&nbsp;+91 8979630873&nbsp;
                   </p>
                   <p class="font-medium text-center">
-                    Email:&nbsp;seedsnitch@abc.com&nbsp;
+                    Email:&nbsp;connect@seedsnitch.in&nbsp;
                   </p>
                 </div>
                 <p>&nbsp;</p>
