--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
 
   <body>
     <nav
-      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue"
+      class="bg-transparent px-4 flex items-center justify-between pt-4 pb-4 mx-auto fixed top-0 left-0 right-0 z-50 text-textBlue font-[600]"
       id="navbar"
     >
       <div class="max-w-1/2 md:max-w-1/3">
