--- a/pages/ambassador.html
+++ b/pages/ambassador.html
@@ -276,7 +276,7 @@
                 <textarea
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-plan"
-                  name="Describe your approach here"
+                  name="Networking Approach"
                   placeholder="Describe your approach here..."
                   rows="7"
                   required
@@ -294,7 +294,7 @@
                   Remember, you get rewarded if we help them scale.
                 </label>
                 <textarea
-                  name="Linkedin-Profiles"
+                  name="Founder Linkedin"
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-prob"
                   placeholder="Drop their linkedin profiles here..."
@@ -312,7 +312,7 @@
                   Is there anything you want to tell us about yourself?
                 </label>
                 <textarea
-                  name="tell us about yourself"
+                  name="About Yourself"
                   class="w-full bg-gray-100 text-darkBlue border border-b-gray-100 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
                   id="grid-desc"
                   placeholder="Tell us about yourself..."
