--- a/pages/apply.html
+++ b/pages/apply.html
@@ -255,7 +255,7 @@
                     id="grid-stage"
                     type="text"
                     required
-                    name="Status-of-startup"
+                    name="Startup Stage"
                     placeholder="Current status of startup"
                   />
                 </div>
@@ -278,7 +278,7 @@
                     id="grid-diff"
                     placeholder="What makes you stand apart?"
                     rows="7"
-                    name="Desc-of-startup"
+                    name="Idea Description"
                     required
                   ></textarea>
                 </div>
@@ -317,7 +317,7 @@
                     id="grid-diff"
                     placeholder="What stands you apart?"
                     rows="7"
-                    name="Differentiator"
+                    name="USP"
                     required
                   ></textarea>
                 </div>
