--- a/pages/contact.html
+++ b/pages/contact.html
@@ -153,7 +153,7 @@
                   id="grid-first-name"
                   type="text"
                   required
-                  name="First-Name"
+                  name="First Name"
                   placeholder="First Name"
                 />
               </div>
