--- a/pages/apply.html
+++ b/pages/apply.html
@@ -298,7 +298,7 @@
                     placeholder="Problem statement"
                     rows="7"
                     required
-                    name="problem-statement"
+                    name="Problem Statement"
                   ></textarea>
                 </div>
               </div>
