--- a/pages/contact.html
+++ b/pages/contact.html
@@ -169,7 +169,7 @@
                   id="grid-last-name"
                   type="text"
                   placeholder="Last Name"
-                  name="Last-Name"
+                  name="Last Name"
                 />
               </div>
             </div>
